# oblique_strategies

./: README.md  flow.sh  pyproject.toml  requirements.txt
doc/: context.md  en.md  fr.md
scripts/: convert_md_to_json.py  install.sh
src/oblique_strategies/: __init__.py  __main__.py  cli.py  core.py  tui.css  tui.py
src/oblique_strategies/data/locales/: en.json  fr.json
